...

    <LinearLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
                app:cardCornerRadius="10dp"
                app:layout_constrainedHeight="true"
                app:layout_constraintBottom_toTopOf="@id/proceedButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...

                            <EditText
                                android:id="@+id/fullNameEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/fullNameErrorTex"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                                <EditText
                                    android:id="@+id/mobileNumberEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/mobileErrorText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/emailEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/postalCodeEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/stateEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/cityEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/addressEditText1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/addressEditText2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...
