...
    android:id="@+id/coordinatorMainBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg">

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
...
                        android:layout_marginEnd="16dp"
                        android:background="@android:color/white"
                        android:visibility="visible"
                        app:cardCornerRadius="10dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/deliveryAddressConstraintLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/cardview_bg"
                            android:paddingBottom="12dp"
                            android:visibility="visible">

...
                                android:src="@drawable/ic_boxpay_deliver_location"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"/>

                            <TextView
                                android:id="@+id/nameAndMobileTextViewMain"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="12dp"
                                android:fontFamily="@font/poppins_medium"
                                android:text="Deliver to"
...
