...
    android:layout_height="match_parent"
    android:layout_marginTop="70dp"
    android:id="@+id/main_container"
    tools:context=".MerchantDetailsScreen">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="Enter Session Token"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintEnd_toEndOf="@+id/environmentSpinner"
        app:layout_constraintStart_toStartOf="@+id/environmentSpinner"
        app:layout_constraintTop_toBottomOf="@+id/cardRadioButton" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
