...
        android:layout_height="match_parent"
        android:background="#6E5B5B"
        android:visibility="gone"/>


    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topConstraint"
...
            app:layout_constraintTop_toBottomOf="@id/topConstraint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_sheet_bg"
                android:paddingBottom="12dp">


...
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView12">

                        <LinearLayout
                            android:id="@+id/upiLinearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:weightSum="1">

                            <androidx.constraintlayout.widget.ConstraintLayout
...
                                android:background="@android:color/white"
                                android:orientation="vertical"
                                android:visibility="visible"
                                android:weightSum="2">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:id="@+id/popularUPIAppsConstraint"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:id="@+id/popularAppsTextView"
                                        android:layout_width="wrap_content"
...
                                    android:background="@drawable/dashed_line"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/payUsingAnyUPIConstraint" />

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:id="@+id/addNewUPIIDConstraint"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:paddingTop="12dp"
                                    android:paddingEnd="12dp"
                                    android:paddingBottom="12dp"
...
                                    android:background="@drawable/dashed_line"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/payUsingAnyUPIConstraint" />

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:id="@+id/UPIQRConstraint"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="12dp"
                                    android:paddingEnd="12dp"
                                    android:paddingBottom="12dp"
                                    android:visibility="gone">
...
